--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 [EMAIL-API]
+CORS_ORIGIN = https://www.example.com
 TURNSTILE_ENABLED = True
 TURNSTILE_SECRET_KEY = <cloudflare_site_secret_key>
 SMTP_SERVER = mail.example.com
